--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,13 @@
     box-sizing: border-box;
 }
 
-#main {
+html {
+    font-family: 'Times New Roman', Times, serif;
+    scroll-behavior: smooth;
+}
 
+#main {
+    
 }
 
 li {
@@ -53,7 +58,7 @@ hr {
     margin-top: 30px;
     background-color: #f1f1f1;
     color: #000;
-    padding: 10px 4px;
+    padding: 10px 16px;
     border: none;
 }
 
@@ -220,6 +225,12 @@ hr {
 
 
 #footer {
+    background-color: #f1f1f1;
+}
+
+#footer .copyright {
+    text-align: center;
+    padding: 47px 0;
 
 }
 
